--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 	<title>Selectors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style3.css">
 </head>
 <body>
 	<div class="gallery">
