--- a/index6.html
+++ b/index6.html
@@ -28,6 +28,7 @@
 		<div>Row 1</div>
 		<div>Row 2</div>
 		<div>Row 3</div>
+		<h2>A new heading</h2>
 		<div>Row 4</div>
 		<div>Row 5</div>
 		<div>Row 6</div>
